added gifs and edited htmls
filled out about.html
made colour scheme
edited index.html
added badass construction .gifs

--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
 
 <body>
 
-	<header>
+	<header style="text-align: center;">
 	
 	
-	<h1>Sigourney Philotes Kunst</h1>
+	<p>Sigourney Philotes Kunst</p>
+	
+	</header>
+
 	<nav>
 
 	<a href="index.html">Foyer</a>
@@ -37,8 +40,7 @@
 
 	</nav>
 	
-	</header>
-
+	
 	
 
 <article>
@@ -47,11 +49,21 @@
 	
 	<p>
 	You've reached my fantabulous web home. <p>
-	Feel free to root around as you will	
-	</p>
+	<p>Feel free to root around as you will, and do pardon our dust.</p>
 
+	<! Yes this is a series of boomer ass construction gifs. It rocks. >
+
+	<img src="underconstruction.gif" alt="burning construction"><p>
+	<img src="headdesk.gif"><p>
+    <img src="jackhammer.gif"> <img src="jackhammer.gif"> 
+    <img src="jackhammer.gif"> <p> <img src="headdesk.gif">
 </article>
 
 </body>
-<footer></footer>
+<footer>
+
+Copyright Sigourney P Kunst 2022-.  <p>
+Do whatever the fuck you want with the source, I ripped it off others anyway 
+
+</footer>
 </html>
